[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rclpy-intellisense"
authors = [
  { name="offish", email="overutilization@gmail.com" },
]
description = "Get intellisense for rclpy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/offish/rclpy-intellisense"
"Bug Tracker" = "https://github.com/offish/rclpy-intellisense/issues"

[tool.setuptools_scm]